[package]
name = "count_where"
version = "0.1.1"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
edition = "2018"
license = "MIT"
description = "library that adds a count_where method to Iterator, to easily count items matching a condition"
homepage = "https://github.com/bryceac/count_where"
readme = "README.mediawiki"
repository = "https://github.com/bryceac/count_where"
keywords = ["count", "where", "countwhere", "iterator"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
